Fix multiple play bug

--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
             <button id="decreaseBPM">Decrease BPM</button>
             <button id="increaseBPM">Increase BPM</button>
         <div>
-        <div>Tempo Indicator</div>
+        <!-- <div>Tempo Indicator</div> -->
         <button id="playButton">Play</button>
         <button id="pauseButton">Pause</button>
         <div>
@@ -35,6 +35,12 @@
             <h3>History</h3>
             <ul id="history"></ul>
         </div>
+        <!-- <div>Stopwatch
+            <p id="stopwatch"></p>
+            <button id="stopwatchStart">Start</button>
+            <button id="stopwatchStop">Stop</button>
+            <button id="stopwatchReset">Reset</button>
+        </div> -->
         <audio id="lo" src="Synth_Sine_C_lo.wav"></audio>
         <audio id="hi" src="Synth_Sine_C_hi.wav"></audio>
     </main>
