--- a/main.html
+++ b/main.html
@@ -18,17 +18,26 @@
             <p id="bpm"></p>
         </div>
         <div>
-            <button id="decreaseBPM">Decrease BPM</button>
-            <button id="increaseBPM">Increase BPM</button>
+            <button id="decreaseBPMByTen">- 10</button>
+            <button id="decreaseBPM">- 1</button>
+            <button id="increaseBPM">+ 1</button>
+            <button id="increaseBPMByTen">+ 10</button>
         <div>
-        <!-- <div>Tempo Indicator</div> -->
+        <div>
+            <span id="hiIndicator">○</span>
+            <span id="loIndicator">○</span>
+        </div>
         <button id="playButton">Play</button>
         <button id="pauseButton">Pause</button>
         <div>
             <input type="checkbox" id="checkbox">
             <label for="checkbox">Stress First Beat</label>
         </div>
-        <div id="counter">0</div>
+        <div>
+                Counter:&nbsp;<span id="counter">0</span>
+                <br />
+                Reps:&nbsp;<span id="reps">0</span>
+        </div>
         <button id="resetCounterButton">Reset Counter</button>
         <button id="clearHistoryButton">Clear History</button>
         <div id="historyContainer">
@@ -44,12 +53,10 @@
         <audio id="lo" src="Synth_Sine_C_lo.wav"></audio>
         <audio id="hi" src="Synth_Sine_C_hi.wav"></audio>
     </main>
-    <footer>
-        <!-- Your footer content goes here -->
+    <!-- <footer>
         <p>© 2024 Metrognome</p>
-    </footer>
-    <!-- Add your JavaScript file link here -->
-    <!-- <script src="script.js"></script> -->
+    </footer> -->
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
+
 </html>
