add bpm label and clean up

--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
             <div>
                 <div class="container">
                     <div id="bpm"></div>
+                    <span id="bpmLabel">beats per minute</span>
                 </div>
                 <div class="container">
                     <button id="decreaseBPMByTen">- 10</button>
