--- a/main.html
+++ b/main.html
@@ -68,15 +68,16 @@
                 </article>
             </div>
             <!-- <div id="spacer"></div> -->
-            <!-- <div id="stopwatchContainer">
+            <div id="stopwatchContainer">
                 <article>
                     <header>Stopwatch</header>
                     <p id="stopwatch"></p>
-                    <button id="stopwatchStart">Start</button>
+                    <button id="stopwatchZeroStart">Start from zero</button>
                     <button id="stopwatchStop">Stop</button>
+                    <button id="stopwatchContinue">Continue</button>
                     <button id="stopwatchReset">Reset</button>
                 </article>
-            </div> -->
+            </div>
         </div>
         
        
@@ -106,6 +107,7 @@
         <p>© 2024 Metrognome</p>
     </footer> -->
     <script src="main.js"></script>
+    <script src="stopwatch.js"></script>
 </body>
 
 </html>
