cleanup unused styles and markup

--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="pico.min.css" />
 </head>
 <body>
-    <header>
+    <header class="center-text">
         <h1>Metrognome</h1>
     </header>
     <main>
@@ -67,7 +67,6 @@
                     </div>
                 </article>
             </div>
-            <!-- <div id="spacer"></div> -->
             <div id="stopwatchContainer">
                 <article>
                     <header>Stopwatch</header>
@@ -103,9 +102,9 @@
         <audio id="hi" src="Synth_Sine_C_hi.wav"></audio>
         <audio id="bell" src="boxing-bell.mp3"></audio>
     </main>
-    <!-- <footer>
+    <footer>
         <p>© 2024 Metrognome</p>
-    </footer> -->
+    </footer>
     <script src="main.js"></script>
     <script src="stopwatch.js"></script>
 </body>
