Add stopwatch history

--- a/main.html
+++ b/main.html
@@ -76,6 +76,12 @@
                     <button id="stopwatchContinue">Continue</button>
                     <button id="stopwatchReset">Reset</button>
                 </article>
+                <article>
+                    <header>Stopwatch History</header>
+                    <table>
+                        <tbody id="stopwatchHistory"></tbody>
+                    </table>
+                </article>
             </div>
         </div>
         
